feat(translate and rules): Translation + font + rules Translate content to english Change title font Add Fight code rules

--- a/index.html
+++ b/index.html
@@ -54,13 +54,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Les règles</a>
+                        <a class="page-scroll" href="#about">The Rules</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">S'inscrire</a>
+                        <a class="page-scroll" href="#subscribe">Subscribe</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#jury">The Jury</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#sponsors">Sponsors</a>
                     </li>
                 </ul>
             </div>
@@ -81,9 +84,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Fight Code</h1>
-                        <p class="intro-text">Follow the rules.
-                            <br>And enter the arena.</p>
+                        <div class="brand-heading">fight Code</div>
+                        <p class="intro-text">Enter the arena. Follow the rules.
+                            <br>October 19th. Paris.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -94,58 +97,50 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="about" class="container rules-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>The rules of the Fight Code</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Download Section -->
-    <section id="download" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Venez les voir s'affronter avec leurs claviers</h2>
-                    <p>Venez encourager les équipes dans une ambiance de folie.</p>
-                    <a href="http://meetup.com/fightcode/" class="btn btn-default btn-lg">S'inscrire</a>
+                <div class="rules">
+                    <p>
+                        <span class="rule-number">#1</span> ONLY <span class="rule-highlight">4 teams</span> TO THE FIGHT.
+                    </p>
+                    <p>
+                        <span class="rule-number">#2</span> FIGHTS WILL <span class="rule-highlight">go on</span> FOR <span class="rule-highlight">20 minutes</span>.
+                    </p>
+                    <p>
+                        <span class="rule-number">#3</span> ONLY <span class="rule-highlight">2 teams</span> IN FINAL.
+                    </p>
+                    <p>
+                        <span class="rule-number">#4</span> NO <span class="rule-highlight">shirts</span>, NO <span class="rule-highlight">shoes</span>.
+                    </p>
+                    <p>
+                        <span class="rule-number">#5</span> THE <span class="rule-highlight">jury</span> MAKES <span class="rule-highlight">the rules</span>
+                    </p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <!--<section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+    <!-- Download Section -->
+    <section id="subscribe" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Come and watch them fight with their keyboard.</h2>
+                    <p>Chose your side and support your team.</p>
+                    <a href="http://meetup.com/fightcode/" class="btn btn-default btn-lg">Subscribe</a>
+                </div>
             </div>
         </div>
-    </section>-->
-    <section id="team" class="content-section text-center">
+    </section>
+
+    <section id="jury" class="content-section text-center">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Ils seront la pour vous juger</h2>
-                    <h3 class="section-subheading text-muted">Une équipe de 4 jurés hors du commun.</h3>
+                    <h2 class="section-heading">They will be there to juge</h2>
+                    <h3 class="section-subheading text-muted">A team of 4 outstanding judges</h3>
                 </div>
             </div>
             <div class="row">
@@ -196,7 +191,7 @@
     </div>
 
     <section id="sponsors" class="content-section text-center">
-        <p>Partenaires</p>
+        <p>Partners</p>
     </section>
     <!-- Footer -->
     <footer>
