feat(rules): Add rules

--- a/index.html
+++ b/index.html
@@ -103,19 +103,28 @@
                 <h2>The rules of the Fight Code</h2>
                 <div class="rules">
                     <p>
-                        <span class="rule-number">#1</span> ONLY <span class="rule-highlight">4 teams</span> TO THE FIGHT.
+                        <span class="rule-number">#1</span> YOU <span class="rule-highlight">do talk</span> ABOUT FIGHT CODE.
                     </p>
                     <p>
-                        <span class="rule-number">#2</span> FIGHTS WILL <span class="rule-highlight">go on</span> FOR <span class="rule-highlight">20 minutes</span>.
+                        <span class="rule-number">#2</span> YOU <span class="rule-highlight">do talk</span> ABOUT FIGHT CODE.
                     </p>
                     <p>
-                        <span class="rule-number">#3</span> ONLY <span class="rule-highlight">2 teams</span> IN FINAL.
+                        <span class="rule-number">#3</span> FIGHTS WILL <span class="rule-highlight">go on</span> FOR <span class="rule-highlight">20 minutes</span>.
                     </p>
                     <p>
-                        <span class="rule-number">#4</span> NO <span class="rule-highlight">shirts</span>, NO <span class="rule-highlight">shoes</span>.
+                        <span class="rule-number">#4</span> ONLY <span class="rule-highlight">4 teams</span> TO FIGHT.
                     </p>
                     <p>
-                        <span class="rule-number">#5</span> THE <span class="rule-highlight">jury</span> MAKES <span class="rule-highlight">the rules</span>
+                        <span class="rule-number">#5</span><span class="rule-highlight">one fight</span> AT A TIME.
+                    </p>
+                    <p>
+                        <span class="rule-number">#6</span> NO <span class="rule-highlight">shirts</span>, NO <span class="rule-highlight">shoes</span>.
+                    </p>
+                    <p>
+                        <span class="rule-number">#7</span> THE <span class="rule-highlight">jury</span> MAKES <span class="rule-highlight">the rules</span>.
+                    </p>
+                    <p>
+                        <span class="rule-number">#8</span> IF YOU GOT <span class="rule-highlight">selected</span> AT FIGHT CODE, YOU HAVE TO CODE.
                     </p>
                 </div>
             </div>
