fix(pictures): Add anonymous pictures and change olivier's picture

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <span class="rule-number">#4</span> ONLY <span class="rule-highlight">4 teams</span> TO FIGHT.
                     </p>
                     <p>
-                        <span class="rule-number">#5</span><span class="rule-highlight">one fight</span> AT A TIME.
+                        <span class="rule-number">#5</span><span class="rule-highlight"> one fight</span> AT A TIME.
                     </p>
                     <p>
                         <span class="rule-number">#6</span> NO <span class="rule-highlight">shirts</span>, NO <span class="rule-highlight">shoes</span>.
@@ -155,7 +155,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/olivier.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/olivier2.jpg" class="img-responsive img-circle" alt="">
                         <h4>Olivier Leplus</h4>
                         <!--<p class="text-muted">Lead Designer</p>
                         <ul class="list-inline social-buttons">
@@ -176,14 +176,14 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/olivier.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Olivier Leplus</h4>
+                        <img src="img/team/anonymous.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Anonymous</h4>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/wassim.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Wassim Chegham</h4>
+                        <img src="img/team/anonymous.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Anonymous</h4>
                     </div>
                 </div>
             </div>
