--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">They will be there to juge</h2>
+                    <h2 class="section-heading">They will be there to jugge</h2>
                     <h3 class="section-subheading text-muted">A team of 4 outstanding judges</h3>
                 </div>
             </div>
@@ -205,7 +205,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
+            Original theme by Media Strategies, LLC. Updated by Fight code team
         </div>
     </footer>
 
