--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
-                        <div class="brand-heading"><span>fight</span> <span>code</span></div>
+                        <div class="brand-heading"><span>fight</span> <span>Code</span></div>
                         <p class="intro-text">Enter the arena. Follow the rules.
                             <br>October 19th. Paris.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
