update(rules) Testing rules style and content

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
     <!-- Intro Header -->
 
     <header class="intro">
-        <video autoplay="" playsinline="" loop="" muted="" preload="auto">
-            <source src="videos/bg1.mp4" type="video/mp4" id="SITE_BACKGROUNDcurrentVideomp4" class="siteBackgroundcurrentVideomp4" data-reactid=".0.$SITE_BACKGROUND.$t9jub.1.0.0">
-            <source src="http://video.wixstatic.com/video/11062b_6a134fc09ea34833a17d295e295ab517/1080p/webm/file.webm" type="video/webm">
-            <source src="http://video.wixstatic.com/video/11062b_6a134fc09ea34833a17d295e295ab517/1080p/mp4/file.mp4" type="video/mp4">
-        </video>
+        <!--<video autoplay="" playsinline="" loop="" muted="" preload="auto">-->
+            <!--<source src="videos/bg1.mp4" type="video/mp4" id="SITE_BACKGROUNDcurrentVideomp4" class="siteBackgroundcurrentVideomp4" data-reactid=".0.$SITE_BACKGROUND.$t9jub.1.0.0">-->
+            <!--<source src="http://video.wixstatic.com/video/11062b_6a134fc09ea34833a17d295e295ab517/1080p/webm/file.webm" type="video/webm">-->
+            <!--<source src="http://video.wixstatic.com/video/11062b_6a134fc09ea34833a17d295e295ab517/1080p/mp4/file.mp4" type="video/mp4">-->
+        <!--</video>-->
         <div class="intro-body">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
-                        <div class="brand-heading"><span>fight</span> <span>Code</span></div>
+                        <!--<div class="brand-heading"><span>fight</span> <span>Code</span></div>-->
                         <p class="intro-text">Enter the arena. Follow the rules.
                             <br>October 19th. Paris.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
@@ -103,10 +103,10 @@
                 <h2>The rules of the Fight Code</h2>
                 <div class="rules">
                     <p>
-                        <span class="rule-number">#1</span> YOU <span class="rule-highlight">do talk</span> ABOUT FIGHT CODE.
+                        <span class="rule-number">#1</span> YOU <span class="rule-highlight">do not talk</span> ABOUT FIGHT CODE.
                     </p>
                     <p>
-                        <span class="rule-number">#2</span> YOU <span class="rule-highlight">do talk</span> ABOUT FIGHT CODE.
+                        <span class="rule-number">#2</span> YOU <span class="rule-highlight">do not talk</span> ABOUT FIGHT CODE.
                     </p>
                     <p>
                         <span class="rule-number">#3</span> FIGHTS WILL <span class="rule-highlight">go on</span> FOR <span class="rule-highlight">20 minutes</span>.
@@ -124,7 +124,7 @@
                         <span class="rule-number">#7</span> THE <span class="rule-highlight">jury</span> MAKES <span class="rule-highlight">the rules</span>.
                     </p>
                     <p>
-                        <span class="rule-number">#8</span> IF YOU GOT <span class="rule-highlight">selected</span> AT FIGHT CODE, YOU HAVE TO CODE.
+                        <span class="rule-number">#8</span> IF YOU GOT <span class="rule-highlight">selected</span> AT FIGHT CODE, <span class="rule-highlight">YOU HAVE TO CODE</span>.
                     </p>
                 </div>
             </div>
