--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <!--<div class="brand-heading"><span>fight</span> <span>Code</span></div>-->
-                        <p class="intro-text">Enter the arena. Follow the rules.
-                            <br>October 19th. Paris.</p>
+                        <p class="intro-text">4 team, 1 winner. Enter the arena.
+                            <br>October 17th, Paris, France.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -136,9 +136,9 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Come and watch them fight with their keyboard.</h2>
-                    <p>Chose your side and support your team.</p>
-                    <a href="http://meetup.com/fightcode/" class="btn btn-default btn-lg">Subscribe</a>
+                    <h2>Come and watch the first Angular2 coding fight.</h2>
+                    <p>Chose the right side and support your team.</p>
+                    <a href="http://meetup.com/fightcode/" class="btn btn-default btn-lg">Let the fight begin</a>
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">They will be there to jugge</h2>
+                    <h2 class="section-heading">They will be there to judge</h2>
                     <h3 class="section-subheading text-muted">A team of 4 outstanding judges</h3>
                 </div>
             </div>
