--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <div class="brand-heading"><span>fight</span> <span>Code</span></div>
-                        <p class="intro-text">4 team, 1 winner. Enter the arena.
+                        <p class="intro-text">4 teams, 1 winner. Enter the arena.
                             <br>October 17th, Paris, France.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -136,8 +136,8 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Come and watch the first Angular2 coding fight.</h2>
-                    <p>Chose the right side and support your team.</p>
+                    <h2>Come and watch the first Angular 2 coding fight.</h2>
+                    <p>Choose the right side and support your team.</p>
                     <a href="http://meetup.com/fightcode/" class="btn btn-default btn-lg">Let the fight begin</a>
                 </div>
             </div>
