--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section id="about" class="container rules-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Rules of the Fight Code</h2>
+                <h2>The Rules of Fight Code</h2>
                 <div class="rules">
                     <p>
                         <span class="rule-number">#1</span> YOU <span class="rule-highlight">do not talk</span> ABOUT FIGHT CODE.
