feat(location) : Add location

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Figh Code</title>
+    <title>Fight Code</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -196,6 +196,10 @@
     </section>
 
     <!-- Map Section -->
+    <section id="location" class="content-section text-center">
+        <h2>We will be waiting for you</h2>
+        <p>Ecole 42, 96 Boulevard Bessières, 75017 Paris</p>
+    </section>
     <div id="map">
     </div>
 
