--- a/index.html
+++ b/index.html
@@ -205,6 +205,18 @@
 
     <section id="sponsors" class="content-section text-center">
         <p>Partners</p>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2">
+                <a href="http://www.42.fr/" class="sponsor" target="_blank">
+                    <img src="img/42.png" alt="42"/>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="http://gwapit.com/" class="sponsor" target="_blank">
+                    <img src="img/gwapit.png" alt="Gwapit"/>
+                </a>
+            </div>
+        </div>
     </section>
     <!-- Footer -->
     <footer>
