--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="col-md-10 col-md-offset-1">
                         <div class="brand-heading"><span>fight</span> <span>Code</span></div>
                         <p class="intro-text">4 teams, 1 winner. Enter the arena.
-                            <br>October 17th, Paris, France.</p>
+                            <br>February 2nd, Paris, France.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
