changes required by FX

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Fight</span> Code
+                    <img src="img/logo-fight-code.png" class="img-responsive" alt="">
                 </a>
             </div>
 
@@ -176,14 +176,14 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/anonymous.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Anonymous</h4>
+                        <img src="img/team/antonio_goncalves_devoxx.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Antonio Goncalves</h4>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/anonymous.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Anonymous</h4>
+                        <img src="img/team/anonymous.png" class="img-responsive img-circle" alt="">
+                        <h4>T. D.</h4>
                     </div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
 
     <!-- Map Section -->
     <section id="location" class="content-section text-center">
-        <h2>We will be waiting for you</h2>
+        <h2>And they will judge you in the Ecole 42 basement</h2>
         <p>Ecole 42, 96 Boulevard Bessières, 75017 Paris</p>
     </section>
     <div id="map">
@@ -221,7 +221,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            Original theme by Media Strategies, LLC. Updated by Fight code team
+            Updated by Fight code team
         </div>
     </footer>
 
