--- a/index.html
+++ b/index.html
@@ -206,14 +206,32 @@
     <section id="sponsors" class="content-section text-center">
         <p>Partners</p>
         <div class="row">
-            <div class="col-md-4 col-md-offset-2">
-                <a href="http://www.42.fr/" class="sponsor" target="_blank">
-                    <img src="img/42.png" alt="42"/>
+            <div class="col-md-2 col-md-offset-3">
+                <a href="https://www.societegenerale.com" class="sponsor" target="_blank">
+                    <img src="img/partner/societe-generale.png" alt="Société Générale"/>
                 </a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-2">
+                <a href="http://www.devoxx.fr/" class="sponsor" target="_blank">
+                    <img src="img/partner/devoxx.png" alt="DEVOXX"/>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="http://www.sfeir.com/" class="sponsor" target="_blank">
+                    <img src="img/partner/sfeir.png" alt="SFEIR"/>
+                </a>
+            </div>
+        </div>
+        <p>&nbsp;</p>
+        <div class="row">
+            <div class="col-md-2 col-md-offset-4">
                 <a href="http://gwapit.com/" class="sponsor" target="_blank">
-                    <img src="img/gwapit.png" alt="Gwapit"/>
+                    <img src="img/partner/gwapit.png" alt="Gwapit"/>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="http://www.42.fr/" class="sponsor" target="_blank">
+                    <img src="img/partner/42.png" alt="42"/>
                 </a>
             </div>
         </div>
