change shirt to headphones

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <span class="rule-number">#5</span><span class="rule-highlight"> one fight</span> AT A TIME.
                     </p>
                     <p>
-                        <span class="rule-number">#6</span> NO <span class="rule-highlight">shirts</span>, NO <span class="rule-highlight">shoes</span>.
+                        <span class="rule-number">#6</span> NO <span class="rule-highlight">headphones</span>, NO <span class="rule-highlight">shoes</span>.
                     </p>
                     <p>
                         <span class="rule-number">#7</span> THE <span class="rule-highlight">jury</span> MAKES <span class="rule-highlight">the rules</span>.
