--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Come and watch the first Angular 2 coding fight.</h2>
                     <p>Choose the right side and support your team.</p>
-                    <a href="http://meetup.com/fightcode/" class="btn btn-default btn-lg">Let the fight begin</a>
+                    <a href="https://www.meetup.com/AngularX-Paris/events/236280865/" class="btn btn-default btn-lg">Let the fight begin</a>
                 </div>
             </div>
         </div>
