--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">They will be there to judge</h2>
-                    <h3 class="section-subheading text-muted">A team of 4 outstanding judges</h3>
+                    <h3 class="section-subheading text-muted">A team of 5 outstanding judges</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-2 col-md-offset-1">
                     <div class="team-member">
                         <img src="img/team/olivier2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Olivier Leplus</h4>
+                        <h4>Olivier<br>Leplus</h4>
                         <!--<p class="text-muted">Lead Designer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
@@ -168,22 +168,28 @@
                         </ul>-->
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <div class="team-member">
                         <img src="img/team/wassim.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Wassim Chegham</h4>
+                        <h4>Wassim<br>Chegham</h4>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/audrey.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Audrey<br>Neveu</h4>
+                    </div>
+                </div>
+                <div class="col-sm-2">
                     <div class="team-member">
                         <img src="img/team/antonio_goncalves_devoxx.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Antonio Goncalves</h4>
+                        <h4>Antonio<br>Goncalves</h4>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/team/anonymous.png" class="img-responsive img-circle" alt="">
-                        <h4>T. D.</h4>
+                        <img src="img/team/philippe.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Philippe<br>antoine</h4>
                     </div>
                 </div>
             </div>
