--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="img/logo-fight-code.png" class="img-responsive" alt="">
+                    <img src="img/logo-fight-code.png" class="img-responsive logo" alt="">
                 </a>
             </div>
 
@@ -86,7 +86,7 @@
                     <div class="col-md-10 col-md-offset-1">
                         <div class="brand-heading"><span>fight</span> <span>Code</span></div>
                         <p class="intro-text">4 teams, 1 winner. Enter the arena.
-                            <br>February 2nd, Paris, France.</p>
+                            <br>June 17th, Paris France.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -136,9 +136,9 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Come and watch the first Angular 2 coding fight.</h2>
+                    <h2>Come and watch the second angular 2 coding fight.</h2>
                     <p>Choose the right side and support your team.</p>
-                    <a href="https://www.meetup.com/AngularX-Paris/events/236280865/" class="btn btn-default btn-lg">Let the fight begin</a>
+                    <a href="https://www.meetup.com/fr-FR/AngularX-Paris/events/240421991/" class="btn btn-default btn-lg">Let the fight begin</a>
                 </div>
             </div>
         </div>
@@ -176,8 +176,8 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/team/audrey.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Audrey<br>Neveu</h4>
+                        <img src="img/team/marie.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Marie<br>Terrier</h4>
                     </div>
                 </div>
                 <div class="col-sm-2">
@@ -203,8 +203,8 @@
 
     <!-- Map Section -->
     <section id="location" class="content-section text-center">
-        <h2>And they will judge you in the Ecole 42 basement</h2>
-        <p>Ecole 42, 96 Boulevard Bessières, 75017 Paris</p>
+        <h2>And they will judge you at Vivatech</h2>
+        <p>Paris Expo Porte de Versailles<br />1 Place de la Porte de Versailles, 75015 Paris</p>
     </section>
     <div id="map">
     </div>
@@ -212,19 +212,19 @@
     <section id="sponsors" class="content-section text-center">
         <p>Partners</p>
         <div class="row">
-            <div class="col-md-2 col-md-offset-3">
-                <a href="https://www.societegenerale.com" class="sponsor" target="_blank">
-                    <img src="img/partner/societe-generale.png" alt="Société Générale"/>
+            <div class="col-md-4">
+                <a href="https://fr.hired.com/" class="sponsor" target="_blank">
+                    <img src="img/partner/hired.png" alt="Hired"/>
                 </a>
             </div>
-            <div class="col-md-2">
-                <a href="http://www.devoxx.fr/" class="sponsor" target="_blank">
-                    <img src="img/partner/devoxx.png" alt="DEVOXX"/>
-                </a>
-            </div>
-            <div class="col-md-2">
+            <div class="col-md-4">
                 <a href="http://www.sfeir.com/" class="sponsor" target="_blank">
                     <img src="img/partner/sfeir.png" alt="SFEIR"/>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="https://www.neo-soft.fr/" class="sponsor" target="_blank">
+                    <img src="img/partner/neosoft.png" alt="Neo Soft"/>
                 </a>
             </div>
         </div>
@@ -236,8 +236,8 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a href="http://www.42.fr/" class="sponsor" target="_blank">
-                    <img src="img/partner/42.png" alt="42"/>
+                <a href="https://vivatechnology.com/" class="sponsor" target="_blank">
+                    <img src="img/partner/vivatech.png" alt="Vivatechnologie"/>
                 </a>
             </div>
         </div>
